--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "1.1.1",
+    "@radix-ui/react-dialog": "1.1.2",
     "@radix-ui/react-label": "2.1.0",
     "@radix-ui/react-scroll-area": "1.2.1",
     "@radix-ui/react-select": "2.1.2",
@@ -20,6 +21,7 @@
     "next": "14.2.20",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "swr": "2.2.5",
     "tailwind-merge": "2.5.5",
     "tailwindcss-animate": "1.0.7",
     "use-debounce": "10.0.4"
